Add Early Access Page

--- a/app/views/layouts/_landingpageheader.html.erb
+++ b/app/views/layouts/_landingpageheader.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top" id="navigation" style="margin-bottom: -20px;">
   <div class="navbar-inner">
     <div class="container-fluid">
-        <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-lowercase-green.png"), "", :id => "logo" %>
+        <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AdviceShare+Logos/AdviceShare-lowercase-green.png"), "/", :id => "logo" %>
       <ul class="nav pull-right">
         <li><%= link_to "Home", root_path, class: 'navbarText' %></li>
         <li><%= link_to "Blog", blog_path, class: 'navbarText' %></li>
