--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'An easier way to give and receive great advice') %>
+
 <div class="middleSectionOfLandingPage">
   <div class="row-fluid">
     <div class="span1 center">
