--- a/app/views/static_pages/earlyaccess.html.erb
+++ b/app/views/static_pages/earlyaccess.html.erb
@@ -1,17 +1,17 @@
-<% provide(:title, 'The easiest way for alumni to help out students and for students to connect with alumni') %>
+<% provide(:title, 'Take the hassle and guesswork out of networking') %>
 <div class="middleSectionOfLandingPage">
   <div class="row-fluid">
     <div class="span1 center">
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">The easiest way for alumni to help out students <br> and for students to connect with alumni.</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Take the hassle and guesswork out of networking.</h1>
     </div>
 
     <div class="span1 center">
     </div>
   </div>
-
+<br>
 
 <div class="row-fluid">
   <div class="span4 center">
