--- a/app/views/static_pages/extraviewcode.html.erb
+++ b/app/views/static_pages/extraviewcode.html.erb
@@ -107,3 +107,28 @@
               </div>
             </div>
           </div> 
+
+
+      
+<!--        <%= render 'blogsignups/blogShare' %>    
+
+Facebook Script
+<div class="headerlinks" style="margin-left: -7px;">
+<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=http://www.adviceshare.co&p[images][0]=https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png&p[title]=&p[summary]=Just%20signed%20up%20for%20early%20access%20to%20@AdviceShare,%20an%20easier%20way%20for%20people%20seeking%20advice%20to%20connect%20with%20those%20who%20want%20to%20help,%20and%20vice%20versa." target="_blank">
+    <div class="socialmedia">
+    <img src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/FB-f-Logo__blue_100.png" />
+    <br>
+    <br>
+    </div>
+</a>
+
+Twitter Script 
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://www.adviceshare.co" data-text="Just signed up for early access to @AdviceShare, an easier way to give and receive great advice!" data-size="large" data-count="none">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+</div>-->
+
+
+
+ 
