--- a/app/views/static_pages/earlyaccess.html.erb
+++ b/app/views/static_pages/earlyaccess.html.erb
@@ -5,7 +5,7 @@
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Take the hassle and guesswork out of networking.</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Take the hassle and guesswork out of networking</h1>
     </div>
 
     <div class="span1 center">
