--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
-<% provide(:title, 'The easiest way for alumni to help out students and for students to connect with alumni') %>
+<% provide(:title, 'Network with members of your university without the hassle or guesswork') %>
 <div class="middleSectionOfLandingPage">
   <div class="row-fluid">
     <div class="span1 center">
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">The easiest way for alumni to help out students <br> and for students to connect with alumni.</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Network with members of your university without the hassle or guesswork</h1>
     </div>
 
     <div class="span1 center">
