Update for latest blog post

--- a/app/views/blogposts/_adviceshareTeamBio.html.erb
+++ b/app/views/blogposts/_adviceshareTeamBio.html.erb
@@ -14,7 +14,7 @@
             The <a class="NoUnderlineForAuthorLinks" href="http://www.Twitter.com/adviceshare" target="_blank">AdviceShare</a> team consists of people who want to help make it easier for you to land great opportunities by sharing their personal experiences. 
           </h4>
           <h4 class="text-left blogPostText" style="margin-left: 40px;">
-            All posts are curated by Malcolm Evans, Founder of AdviceShare (an easier way to give and receive advice). <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co" target="_blank">Reach out to him</a> or <a class="NoUnderlineForAuthorLinks" href="http://www.Twitter.com/malcolm_evans" target="_blank">follow him on Twitter</a>. 
+            All posts are curated by Malcolm Evans, Founder of AdviceShare (networking without the hassle). <a class="NoUnderlineForAuthorLinks" href="mailto:malcolm@AdviceShare.co" target="_blank">Reach out to him</a> or <a class="NoUnderlineForAuthorLinks" href="http://www.Twitter.com/malcolm_evans" target="_blank">follow him on Twitter</a>. 
           </h4>
           <br>
         </div>
