--- a/app/views/blogsignups/_postsToDate.html.erb
+++ b/app/views/blogsignups/_postsToDate.html.erb
@@ -1,6 +1,6 @@
 <br>
 <br>
-<div class="row">
+<div class="row" id="EarlierPosts">
   <div class="span2">
   </div>
   <div class="span8">
@@ -15,15 +15,20 @@
 
 <div class="row">
   
-  <div class="span4">
+  <div class="span3">
   </div>
 
-  <div class="span4">
-    <a href="http://AdviceShare.co/blog/"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
-    <h4 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+  <div class="span3">
+    <a href="/blog/Life-Hacks-for-Holiday-Season-Productivity"><img style="height: 150px; width: 180px; padding-bottom: 5px;" class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg" /></a>
+    <h4 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
   </div>
 
-  <div class="span4">
+  <div class="span3">
+    <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
+    <h4 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+  </div>
+
+  <div class="span3">
   </div>
 
 </div>
