--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -70,11 +70,11 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges, and mistakes we learned in landing the following types of highly coveted positions.</h1>
+    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges, and mistakes we learned in landing the following types of highly coveted positions.</h1> Other posts can be found<a class="NoUnderlineForAuthorLinks" href="/blog/#EarlierPosts"> here</a>.<h5>
     
     <hr>
 
-    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series: Landing Professional and Academic Opportunities.<h5>
+    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series: Landing Professional and Academic Opportunities.<h5> I
     <br>
     <h5 class="blogPostText">"I'm really interested in doing XYZ, and would love to hear the advice of someone who has already done it successfully."
     <br><br>
@@ -88,6 +88,7 @@
       <h4 class="tab">Internships</h4>
 
       <ul class="extraTab">
+        <li class="blogPostText">Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm.</li>
         <li class="blogPostText">In Pursuit of the Dream: How I Landed a Position as A White House Intern.</li>
         <li class="blogPostText">Landing an Opportunity at Google; Insights from a Former Intern and Full-Time Employee.</li>
         <li class="blogPostText">Standing Out in a Crowd: How to Get an Internship on Wall Street.</li>
