--- a/app/views/blogsignups/_postsToDate.html.erb
+++ b/app/views/blogsignups/_postsToDate.html.erb
@@ -20,7 +20,7 @@
 
   <div class="span3">
     <a href="/blog/Life-Hacks-for-Holiday-Season-Productivity"><img style="height: 150px; width: 180px; padding-bottom: 5px;" class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg" /></a>
-    <h4 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+    <h4 class="text-center"><%= link_to "Life Hacks to Stay Productive During the Holiday Season", "/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
   </div>
 
   <div class="span3">
