--- a/app/views/blogsignups/_postsToDate.html.erb
+++ b/app/views/blogsignups/_postsToDate.html.erb
@@ -15,6 +15,21 @@
 
 <div class="row">
   
+  <div class="span4">
+  </div>
+
+  <div class="span4">
+    <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
+    <h4 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+  </div>
+
+  <div class="span4">
+  </div>
+
+</div>
+
+<!--<div class="row">
+  
   <div class="span3">
   </div>
 
@@ -31,7 +46,7 @@
   <div class="span3">
   </div>
 
-</div>
+</div>-->
 
 
 
