Remove Google Analytics code

--- a/app/views/blogposts/blogSignups.html.erb
+++ b/app/views/blogposts/blogSignups.html.erb
@@ -49,8 +49,8 @@
     <div style="text-align: center;">
       <br>
       <br>
-      <h2 class="text-center formMainText">Thanks for your interest! This post is not quite ready yet.</h2>
-      <h3 class="text-center formSubText">Sign up and we'll make sure you don't miss it!</h3>
+      <h2 class="text-center formMainText">From "ugh" to "yes!", we're sharing everything we learned in securing highly coveted opportunities.</h2>
+      <h3 class="text-center formSubText">Sign up to get our posts before they go live.</h3>
       <div style="display: inline-block; text-align: left;">
          <% @blogsignup ||= Blogsignup.new %>
           <%= simple_form_for @blogsignup, :html => {:class => 'form-inline' } do |f| %>
