--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,9 @@
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Network with members of your university without the hassle or guesswork</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Take the free for all out of networking and start having real conversations with people affiliated with your university
+
+        Network with members of your university without the hassle or guesswork</h1>
     </div>
 
     <div class="span1 center">
