--- a/app/views/layouts/landingPageHeader.html.erb
+++ b/app/views/layouts/landingPageHeader.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="//cdn.optimizely.com/js/566460007.js"></script>
     <!-- Google Analytics Content Experiment code
     <script>function utmx_section(){}function utmx(){}(function(){var
     k='80296701-2',d=document,l=d.location,c=d.cookie;
