--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -6,7 +6,7 @@
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">An easier way to give and receive great advice.</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Connect with people within your university, without the hassle of networking</h1>
     </div>
 
     <div class="span1 center">
@@ -32,7 +32,7 @@
     <br>
     <a class="" href=""><i class="fa fa-comments-o fa-5x howItWorksIcons"></i></a>
     <h2 class="howItWorksMainText">Connect with your match.</h2>
-    <h4 class="howItWorksSubText">No more lukewarm connections or wasted time.<br> We'll find the type of people you want to talk to.</h4>
+    <h4 class="howItWorksSubText">No more trial & error or lukewarm conversations.<br> We'll find the type of people you actually want to talk to.</h4>
     <br>
     <br>
     </div>
