--- a/app/views/blogposts/selectingCandidates.html.erb
+++ b/app/views/blogposts/selectingCandidates.html.erb
@@ -76,7 +76,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">Having been on the applicant selection committee at several major firms, we're going to tell you exactly how we used to select candidates for interviews...</h1>
+    <h1 class="text-center postPreviewContent">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we used to select candidates for interviews...</h1>
 
     
     <hr>
