--- a/app/views/static_pages/extraviewcode.html.erb
+++ b/app/views/static_pages/extraviewcode.html.erb
@@ -67,7 +67,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Selecting-Applicants-For-Interviews">Having been on the applicant selection committee at several major firms, we're going to tell you exactly how we used to select candidates for interviews...</a></h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Selecting-Applicants-For-Interviews">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we used to select candidates for interviews...</a></h1>
   </div>
 
 
