--- a/app/views/blogposts/blogSignups.html.erb
+++ b/app/views/blogposts/blogSignups.html.erb
@@ -49,7 +49,7 @@
     <div style="text-align: center;">
       <br>
       <br>
-      <h2 class="text-center formMainText">From "ugh" to "yes!", we're sharing everything we learned in securing highly coveted opportunities.</h2>
+      <h2 class="text-center formMainText">We're sharing everything we learned in securing highly coveted academic and professional opportunities.</h2>
       <h3 class="text-center formSubText">Sign up to get our posts before they go live.</h3>
       <div style="display: inline-block; text-align: left;">
          <% @blogsignup ||= Blogsignup.new %>
