--- a/app/views/blogsignups/_blogSignups.html.erb
+++ b/app/views/blogsignups/_blogSignups.html.erb
@@ -8,8 +8,8 @@
 	  <div style="text-align: center;">
 			<br>
 			<br>
-			<h2 class="text-center formMainText">From "ugh" to "yes!", we're sharing everything we learned in securing highly coveted opportunities.</h2>
-	    <h2 class="text-center formSubText">We've learned a lot and so will you.</h2>
+			<h2 class="text-center formMainText">We're sharing everything we learned in securing highly coveted academic and professional opportunities.</h2>
+	    <h2 class="text-center formSubText">We've learned a lot and so will you!</h2>
 		  <div style="display: inline-block; text-align: left;">
 		  	 <% @blogsignup ||= Blogsignup.new %>
 					<%= simple_form_for @blogsignup, :html => {:class => 'form-inline' } do |f| %>
