--- a/app/views/layouts/_blogheader.html.erb
+++ b/app/views/layouts/_blogheader.html.erb
@@ -8,7 +8,9 @@
       <!--<img id="logo" class="positionAS" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS+Favicon+w%3A+Full+Text.png"  />-->
       <%= link_to image_tag("https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS+Favicon+w%3A+Full+Text.png"), blog_path, :id => "logo", :class =>"positionAS" %>
       <ul class="nav pull-right">
+                        <%= link_to "Subscribe", "/subscribe", class: 'headerlinks, pull-right', style:'margin-top: 16px;' %>
                         <%= link_to "What is AdviceShare?", root_path, class: 'headerlinks, pull-right', style:'margin-top: 16px;' %>
+
                         </ul>
   </div>
   </div>
