--- a/app/views/layouts/landingPageHeader.html.erb
+++ b/app/views/layouts/landingPageHeader.html.erb
@@ -18,7 +18,7 @@
     End of Google Analytics Content Experiment code -->
     
     <!--Meta TAGS-->
-    <meta name="description" content="AdviceShare is like match.com for Advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
+    <meta name="description" content="Networking is a hassle. Adviceshare makes it easy.">
     <link rel="author" href="https://plus.google.com/+MalcolmEvans/">
 
   <% if content_for? :for_socialmedia %>
@@ -27,18 +27,18 @@
 
     <!--Facebook-->
     <meta property="og:type" content="blog"/>
-    <meta property="og:title" content="AdviceShare Blog" />
+    <meta property="og:title" content="Adviceshare" />
     <meta property="fb:admins" content="755565431"/>
     <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png" />
-    <meta property="og:url" content="http://www.AdviceShare.co/blog" />
+    <meta property="og:url" content="http://www.Adviceshare.co/" />
     
     
-    <!--Twitter-->
+    <!--Twitter
     <meta name="twitter:title" content="AdviceShare Blog">
     <meta name="twitter:card" content="blog">
     <meta name="twitter:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png">
     <meta name="twitter:url" content="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
-    <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
+    <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">-->
 
 
     <title><%= full_title(yield(:title)) %></title>
