--- a/app/views/layouts/landingPageHeader.html.erb
+++ b/app/views/layouts/landingPageHeader.html.erb
@@ -29,8 +29,9 @@
     <meta property="og:type" content="blog"/>
     <meta property="og:title" content="Adviceshare" />
     <meta property="fb:admins" content="755565431"/>
-    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png" />
+    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/AdviceShare-Dec-26-green-1.png" />
     <meta property="og:url" content="http://www.Adviceshare.co/" />
+    <meta property="og:description" content="Networking is a hassle. Adviceshare makes it easy.">
     
     
     <!--Twitter
