--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -6,7 +6,7 @@
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Connect with people within your university, without the hassle of networking</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Networking is a hassle. Adviceshare makes it easy.</h1>
     </div>
 
     <div class="span1 center">
