--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'An easier way to give and receive great advice') %>
+<% provide(:title, 'Networking is a hassle. Adviceshare makes it easy.') %>
 
 <div class="middleSectionOfLandingPage">
   <div class="row-fluid">
