fix landing page header

--- a/app/views/signups/create.html.erb
+++ b/app/views/signups/create.html.erb
@@ -19,11 +19,12 @@
         <br>
         <br>
         <br>
-        <a href="http://ctt.ec/7Xfeb" target="_blank">Here's a quick tweet to help :-)</a>
+        <a href="http://ctt.ec/7Xfeb" target="_blank">Here's a quick tweet</a>
         <br>
         <br>
         <br>
         <br>   
+        <a href="http://on.fb.me/1hvxbDA" target="_blank">and a Facebook post to help :-)</a>
         </h1>
        <br>
     </div>
