update landing page

--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -6,7 +6,7 @@
      </div>
 
      <div class="span10 center">
-      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Networking is a hassle. Adviceshare makes it easy.</h1>
+      <h1 class="text-center" style="margin-top: 160px; font-size: 50px; line-height: 150%;">Networking is a hassle.<br>Adviceshare makes it easy.</h1>
     </div>
 
     <div class="span1 center">
@@ -59,7 +59,7 @@
      </div>
 
      <div class="span10 center">
-      
+
       <%= simple_form_for @signup, :html => {:class => 'form-horizontal' } do |f| %>
        <%= f.input_field :name, :label => "", :required => true, :placeholder => 'Name', :style => "height: 30px; width: 200px; margin-bottom: 10px;" %>
         <%= f.input_field :email, :label => "", :required => true, :placeholder => 'Email', :style => "height: 30px; width: 200px; margin-bottom: 10px;" %>
