Selecting Applicants Blog post

--- a/app/views/blogposts/selectingCandidates.html.erb
+++ b/app/views/blogposts/selectingCandidates.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="span6">
-    <a href="" title="" alt="Life Hacks to Stay Productive During the Holiday Season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
   </div>
 
   <div class="span3">
@@ -27,15 +27,15 @@
 <!--Put Blog post title here-->
 <div class="row">
   
-  <div class="span3">
+  <div class="span1">
   </div>
 
-  <div class="span6">
+  <div class="span10">
     <h1 class="text-center"><%= link_to "Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm
-", "/blog/Selecting-Applicants-For-Interviews", class: 'NoUnderlineForLink' %></h1>
+", "", class: 'NoUnderlineForLink mainPostTitleText' %></h1>
   </div>
 
-  <div class="span3">
+  <div class="span1">
   </div>
 
 </div>
@@ -76,7 +76,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we used to select candidates for interviews...</h1>
+    <h1 class="text-center postPreviewContent">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...</h1>
 
     
     <hr>
@@ -126,7 +126,7 @@
     <strong>Managing your social media presence.</strong> People will google your name and look through your profile. Make sure everything they see and read is representative of the brand you want to portray. Even the strongest candidate can’t overcome bad pictures or derogatory posts.
     <br>
     <br>
-    Though the first hurdle is getting to the interview stage, the biggest one is acing the actual interview. We’re going to cover 4 often overlooked interview techniques in our next post. <a class="NoUnderlineForAuthorLinks" href="#SignUp">Sign up here to get it before it goes live!</a>
+    Though the first hurdle is getting to the interview stage, the biggest one is acing the actual interview. We’re going to cover 4 often overlooked interview techniques in our next post. <a class="NoUnderlineForAuthorLinks" href="/subscribe">Sign up here to get it before it goes live!</a>
     
     
     </h5>
