--- a/app/views/blogsignups/_postsToDate.html.erb
+++ b/app/views/blogsignups/_postsToDate.html.erb
@@ -12,23 +12,7 @@
 <br>
 <br>
 
-
-<div class="row">
-  
-  <div class="span4">
-  </div>
-
-  <div class="span4">
-    <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
-    <h4 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
-  </div>
-
-  <div class="span4">
-  </div>
-
-</div>
-
-<!--<div class="row">
+<div class="row visible-desktop visible-tablet">
   
   <div class="span3">
   </div>
@@ -40,13 +24,36 @@
 
   <div class="span3">
     <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
-    <h4 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+    <h4 class="text-center"><%= link_to "How We Landed the Following Professional and Academic Opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
   </div>
 
   <div class="span3">
   </div>
 
-</div>-->
+</div>
+
+<!-- MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE MOBILE -->
+<div class="row visible-mobile hidden-table hidden-desktop">
+  
+  <div class="span3">
+  </div>
+
+  <div class="span3">
+    <a href="/blog/Life-Hacks-for-Holiday-Season-Productivity"><img style="height: 150px; width: 180px; padding-bottom: 5px;" class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg" /></a>
+    <h4 class="text-center"><%= link_to "Life Hacks to Stay Productive During the Holiday Season", "/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+  </div>
+  <br>
+  <br>
+  <br>
+  <div class="span3">
+    <a href="blog/highly-coveted-professional-and-academic-positions"><img class="blogPostImagesToDate" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing%2BProfessional%2Band%2BAcademic%2BPositions.jpg" /></a>
+    <h4 class="text-center"><%= link_to "How We Landed the Following Professional and Academic Opportunities", "/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink, olderBlogPosts' %></h4>
+  </div>
+
+  <div class="span3">
+  </div>
+
+</div>
 
 
 
