--- a/app/assets/stylesheets/blogposts.css.scss
+++ b/app/assets/stylesheets/blogposts.css.scss
@@ -2,6 +2,12 @@
 
 @import "bootstrap-responsive";
 
+/*@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+ h1{
+    font-family: 'Varela Round', sans-serif;
+    font-weight: 400;
+}*/
+
 .formshit{
   width: 135px; 
   height: 30px;
@@ -39,8 +45,14 @@ html,body {
  
 }
 
+
+.mainPostTitleText{
+  font-size: 50px;
+  line-height: 150%;
+  font-family: 'Varela Round', sans-serif;
+}
 .positionAS{
-  margin-left: 32px;
+  margin-left: 35px;
 }
 
 .footerlinks{
@@ -53,7 +65,8 @@ html,body {
 
 .headerlinks{
   color: #404040 !important;
-  margin-top: -50px; 
+  margin-top: -50px;
+  font-size: 22px !important; 
 /*  position:fixed;
   top:60px;
   right:250px;*/
@@ -166,11 +179,11 @@ IMG.blogPostImagesToDate{
 
 IMG.mainBlogpostImage{
     display: block;
-    margin-left: auto;
+    margin-left: 20px;
     margin-right: auto;
     margin-top: -50px;
-    width: 450px; 
-    height: 350px;
+    width: 550px; 
+    height: 450px;
 }
 IMG.signupPageimage {
     display: block;
