--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Everything we learned in securing highly coveted opportunities') %>
+<% provide(:title, 'Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm') %>
 
 <!--Put picture for post here -->
 <br>
@@ -7,8 +7,13 @@
   <div class="span3">
   </div>
 
-  <div class="span6">
-    <a href="http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity" title="" alt="Life Hacks to Stay Productive During the Holiday Season"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Holiday+Season+Productivity.jpg"  /></a>
+
+  <div class="span6 visible-desktop visible-tablet">
+    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
+  </div>
+
+  <div class="span6 visible-mobile hidden-table hidden-desktop">
+    <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" style="margin-left: -1px;" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
   </div>
 
   <div class="span3">
@@ -20,14 +25,15 @@
 <!--Put Blog post title here-->
 <div class="row">
   
-  <div class="span3">
+  <div class="span1">
   </div>
 
-  <div class="span6">
-    <h1 class="text-center"><%= link_to "7 Life Hacks to Stay Productive During the Holiday Season", "http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity", class: 'NoUnderlineForLink' %></h1>
+  <div class="span10">
+    <h1 class="text-center"><%= link_to "Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm
+", "/blog/Selecting-Applicants-For-Interviews", class: 'NoUnderlineForLink mainPostTitleText' %></h1>
   </div>
 
-  <div class="span3">
+  <div class="span1">
   </div>
 
 </div>
@@ -66,7 +72,7 @@
 
 
   <div class="span8">
-    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity">While the holiday season is meant to be enjoyed, it also presents a great opportunity to be productive. Here are a few life hacks that will help...</a></h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Selecting-Applicants-For-Interviews">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...</a></h1>
   </div>
 
 
