Edited Selecting Applicants blog post

--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -4,7 +4,7 @@
     
        
     <!--Meta TAGS-->
-    <meta name="description" content="7 Life Hacks to stay productive during the holiday season.">
+    <meta name="description" content="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm">
     <link rel="author" href="https://plus.google.com/+MalcolmEvans/">
 
   <% if content_for? :for_socialmedia %>
