--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -13,7 +13,7 @@
 
     <!--Facebook-->
     <meta property="og:type" content="blog"/>
-    <meta property="og:title" content="AdviceShare Blog" />
+    <meta property="og:title" content="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm" />
     <meta property="fb:admins" content="755565431"/>
     <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png" />
     <meta property="og:url" content="http://www.AdviceShare.co/blog" />
