--- a/app/views/blogposts/holidayProductivity.html.erb
+++ b/app/views/blogposts/holidayProductivity.html.erb
@@ -52,7 +52,7 @@
           <div class="clearfix content-heading explainergraphicsAuthor">  
           <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
-            <a class="" href="http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity#author">by The AdviceShare team</a> 
+            <a class="" href="/blog/Life-Hacks-for-Holiday-Season-Productivity#author">by The AdviceShare team</a> 
           </h4>
         </div>
   
