--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -49,7 +49,7 @@
           <div class="clearfix content-heading explainergraphicsAuthor">  
           <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
-            <a class="" href="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions#author">by The AdviceShare team</a> 
+            <a class="" href="/blog/highly-coveted-professional-and-academic-positions#author">by The AdviceShare team</a> 
           </h4>
         </div>
   
@@ -70,11 +70,11 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges, and mistakes we learned in landing the following types of highly coveted positions.</h1> Other posts can be found<a class="NoUnderlineForAuthorLinks" href="/blog/#EarlierPosts"> here</a>.<h5>
+    <h1 class="text-center postPreviewContent">We're sharing the strategies, challenges, and mistakes we learned in landing the following types of highly coveted positions.</h1> 
     
     <hr>
 
-    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series: Landing Professional and Academic Opportunities.<h5> I
+    <h5 class="blogPostText" style="font-style: italic;">This is the opening post of our new series: Landing Professional and Academic Opportunities. Other posts can be found<a class="NoUnderlineForAuthorLinks" href="/blog/#EarlierPosts"> here</a>.<h5>
     <br>
     <h5 class="blogPostText">"I'm really interested in doing XYZ, and would love to hear the advice of someone who has already done it successfully."
     <br><br>
