--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -1,19 +1,12 @@
 <% provide(:title, 'Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm') %>
 
-<% content_for :for_socialmedia do %>
-
-  <meta name="description" content="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm" />  
-        
-    <!--Twitter-->
-    
-<% end %>
-
 <!--Put picture for post here -->
 <br>
 <div class="row">
   
   <div class="span3">
   </div>
+
 
   <div class="span6 visible-desktop visible-tablet">
     <a href="/blog/Selecting-Applicants-For-Interviews" title="" alt="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm"><img class="mainBlogpostImage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Selecting+Applicants.jpg"  /></a>
@@ -28,6 +21,7 @@
 
 </div>
 
+
 <!--Put Blog post title here-->
 <div class="row">
   
@@ -36,7 +30,7 @@
 
   <div class="span10">
     <h1 class="text-center"><%= link_to "Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm
-", "", class: 'NoUnderlineForLink mainPostTitleText' %></h1>
+", "/blog/Selecting-Applicants-For-Interviews", class: 'NoUnderlineForLink mainPostTitleText' %></h1>
   </div>
 
   <div class="span1">
@@ -57,7 +51,7 @@
           <div class="clearfix content-heading explainergraphicsAuthor">  
           <img class="pull-left explainergraphicsAuthor" src="https://s3.amazonaws.com/AdviceShare/AS_Favicons/AS_Favicon.png"/>
           <h4 class="text-left blogAuthorName" style="margin-left: 50px;">
-            <a class="" href="http://www.AdviceShare.co/blog/Life-Hacks-for-Holiday-Season-Productivity#author">by The AdviceShare team</a> 
+            by The AdviceShare team
           </h4>
         </div>
   
@@ -70,8 +64,6 @@
   </div>
 </div>
 
-
-
 <!--Put Preview Content Here-->
 <div class="row">
   
@@ -80,86 +72,21 @@
 
 
   <div class="span8">
-    <h1 class="text-center postPreviewContent">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...</h1>
+    <h1 class="text-center"><a class="NoUnderlineForPreviewText" href="/blog/Selecting-Applicants-For-Interviews">Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...</a></h1>
+  </div>
 
-    
-    <hr>
 
-<!--Put Post Content Here-->
-
-    <h5 class="blogPostText" style="font-style: italic;">This is the third post of our new series: Landing Professional and Academic Opportunities. Earlier posts can be found<a class="NoUnderlineForAuthorLinks" href="/blog/#EarlierPosts"> here</a>.<h5>
-    <br>
-    <h5 class="blogPostText">Applying to jobs and internships can often be a black box; you submit your resume and simply hope for the best. Having gone through the application and interview process as a student, and as a member of the selection committee at several firms, I want to provide some transparency about how we actually selected candidates for interviews. As a disclaimer, these insights are solely based on my personal experience and may not be representative. Nonetheless, some context can be helpful.
-    <br>
-    <br>
-    Our recruiting team was broken down by universities. Villanova was always a target school and as such had a dedicated team of recruiters who were normally Villanova alumni though others were welcome. We had a team leader who was responsible for organizing our recruiting efforts, both on campus and off campus. The team leader would liaise with Human Resources (HR) to coordinate our outreach strategy.
-    <br>
-    <br>
-    As part of our recruiting efforts, we did our best to physically go to campus to meet with students several times during application season. Following such events, (firmwide presentations, resume workshops, etc.) HR would ask us if any candidates stood out. Any candidates we mentioned would automatically join the conversation for getting an interview. Once the application deadline passed, HR would compile the resumes of all applicants from Villanova, organize them into a PDF and email it to all members of the recruiting team. Based upon the number of available interview slots, we would then rank the resumes (e.g. if there were 28 interview slots we would select the top 28 resumes). Often times the resume book easily exceeded 150+ applicants. Between working a full-time job and having other commitments, it can be a burdensome task, to say the least, for employees to objectively sift through every resume. Additionally, there were not any universal guidelines for selecting the top 28; it was up to each of us to use our best judgement and personal criteria in order to do so.
-    <br>
-    <br>
-    Given such a task, it is inevitable that certain natural biases will take over. For instance, people will likely favor:
-    <br>
-    <br>
-    <ul class="extraTab">
-        <li class="blogPostText">Familiar names or those they know</li>
-        <li class="blogPostText">Well formatted, mistake free resumes</li>
-        <li class="blogPostText">Experience in the industry and/or at well-known firms</li>
-        <li class="blogPostText">Engagement in activities they can relate to/understand (e.g. someone who is in the same organization they were in during undergrad)</li>
-    </ul>
-    <br>
-    Furthermore, everyone will use their own unique process to select resumes. For instance, some analysts who were overwhelmed with work decided to split the task; each selected 14 and combined them make 28. Others, upon potentially adding someone to the pile of 28, would look the candidate up on Facebook and make a final determination based upon their profile picture. Meanwhile, others would lean heavily towards selecting athletes, while others would only choose people who met a certain GPA threshold.
-    <br>
-    <br>
-    After each person came up with their top resumes, the team would gather to discuss who would be part of the final 28 candidates to receive interviews. Each meeting inevitably began with selecting people who were well connected to influential members of the firm and were guaranteed to get an interview, irrespective of merit. The remaining slots were chosen more traditionally. Someone would present a person, along with their rationale for selecting their resume, and others would chime in accordingly. This is why it is important to have a great 30-second commercial when introducing yourself. A great, concise commercial not only increases the chances a representative will remember you while sifting through the stack, but also aids their ability to pitch your candidacy to others. If you need help coming up with your commercial, or aren't exactly sure what it is just <a class="NoUnderlineForAuthorLinks" href="mailto:general@AdviceShare.co">email the Adviceshare team</a>. We're happy to help.
-    <br>
-    <br>
-    Though the discussions never got extremely heated, there were debates, especially as the number of spots dwindled. How did we solve the debates? While it is intuitive to think we did so based upon objective factors like a candidate's GPA or experience, we did not. In fact, there were times where the committee decided we already had enough high GPA's and it was time to diversify the candidate pool. Instead, debates were mostly solved by the passion and persuasiveness of a candidate’s in-room advocate. When I was applying to the firm where I eventually got my start, my in-room advocate asked me to pitch myself to him before I applied. Later on, he told me that he used the same pitch I gave him to get me through to the interview stage. Though we were thoughtful in selecting candidates for interviews, the meetings lasted an hour tops. It was important, but there was also work to be done.
-    <br>
-    <br>
-    My experiences on both sides of the application process have taught me the importance of the following:
-    <br>
-    <br>
-    <strong>Attending events and building connections.</strong> It’s extremely important to have relationships with decision makers. It begins with attending events and is solidified with timely follow ups. Though some will have more than others, all representatives who attend events will have a degree of influence. Don't just crowd around the senior representatives and ignore the junior people. As a junior analyst I was personally able to advocate for several people to get interviews and likewise saw junior analysts prevent people from getting interviews. 
-    <br>
-    <br>
-    <strong>Selling yourself to earn an in-room advocate.</strong> Without a voice in the room to speak on your behalf, it is incredibly difficult to make it through the resume selection process. Don’t stop at establishing an initial connection with an employee at a firm. Develop the relationship and provide them with strong reasons to advocate on your behalf, whether it is having an interesting story, asking thoughtful follow up questions, or showing your passion for the firm by staying in contact over several months. Give them enough to convince <em>someone else</em> that you are worthy of an interview.
-    <br>
-    <br>
-    <strong>Realizing its not always about merit...in fact it might never be.</strong> When you apply to a position you will have to overcome several things outside of your control such as how well connected other people are and the inherent biases of decision-makers. In my experience, less than 20% of the people who dropped their resumes at a school were offered an interview even though more than 50% of them were probably qualified. While you may be confident you are one of the most qualified candidates for a position, put in the extra effort to boost your chances.
-    <br>
-    <br>
-    <strong>Managing your social media presence.</strong> People will google your name and look through your online profiles. Make sure everything they see and read is representative of the brand you want to portray. Even the strongest candidate can’t overcome bad pictures or derogatory posts.
-    <br>
-    <br>
-    Though the first hurdle is getting to the interview stage, the biggest hurdle to landing a highly coveted position is acing the actual interview. We’re going to cover 4 often overlooked interview techniques in our next post. <a class="NoUnderlineForAuthorLinks" href="/subscribe">Sign up here to get it before it goes live!</a>
-    
-    
-    </h5>
-    <br>
-      
-
-    <h5 class="blogPostText">Thanks for the support and please share if its not too much trouble. Every share means the world to us!
-    <!--<a class="NoUnderlineForAuthorLinks" href="mailto:general@AdviceShare.co">email us!</a>-->
-    <br>
-    <br>
-    
-    </h5>
-    <br>
+  <!--    HLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis
+  </div>-->
 
   <div class="span2">
   </div>
 
 </div>
 
+
+
+ <%= render 'blogsignups/postsToDate' %>
  <br>
  <br>
-<br>
-  <div id="SignUp">
- <%= render 'blogsignups/blogShareSignups' %>
-  </div>
- <!--Author detailed bio here-->
-<%= render 'blogposts/adviceshareTeamBio' %>
-
- <%= render 'blogsignups/blogComments' %>
-
+ <br>
