Update summary for FB

--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -4,7 +4,7 @@
     
        
     <!--Meta TAGS-->
-    <meta name="description" content="Here’s How We Selected Applicants for Interviews at My Fortune 500 Firm">
+    <meta name="description" content="Having been on the interview selection committee at several major firms, we're going to tell you exactly how we selected candidates for interviews...">
     <link rel="author" href="https://plus.google.com/+MalcolmEvans/">
 
   <% if content_for? :for_socialmedia %>
